class Rock:
    def __init__(self) -> None:
        pass

class LargeRock(Rock):
    def __init__(self) -> None:
        super().__init__()

class MediumRock(Rock):
    def __init__(self) -> None:
        super().__init__()

class SmallRock(Rock):
    def __init__(self) -> None:
        super().__init__()
