@startuml Asteroids Game

class Ship {

}

class Bullet {

}

class Rock {

}

class SmallRock {

}

class MediumRock {

}

class LargeRock {

}

class FlyingObject {

}

FlyingObject <-- Rock
FlyingObject <-- Ship
FlyingObject <-- Bullet

Rock <-- SmallRock
Rock <-- MediumRock
Rock <-- LargeRock

@enduml